<resources>
  <string name="app_name">FizzBuzz</string>

  <string name="mockup_value">##</string>

  <string name="play">Play</string>
  <string name="pause">Pause</string>
  <string name="settings">Settings</string>

  <string name="difficulty_title">Difficulty</string>

  <string name="time_limit_key">time_limit</string>
  <string name="time_limit_title">Time limit</string>
  <string name="time_limit_summary">Seconds each value is displayed (0 = no limit)</string>

  <string name="num_digits_key">num_digits</string>
  <string name="num_digits_title">Maximum digits</string>
  <string name="num_digits_summary">Maximum digits in value displayed</string>

  <string name="general_title">General</string>

  <string name="game_time_key">game_time</string>
  <string name="game_time_title">Game duration</string>
  <string name="game_time_summary">Duration of game in seconds</string>
  <string name="status">Current Game Status</string>

  <string name="game_time_elapsed_key">game_time_elapsed</string>
  <string name="game_data_key">game_data</string>

  <string name="fizz">Fizz</string>
  <string name="buzz">Buzz</string>
  <string name="fizzbuzz">FizzBuzz</string>
  <string name="neither">Neither</string>

  <string name="number_header">#</string>
  <string name="category_header">Category</string>
  <string name="user_selection_header">Selection</string>
  <string name="result_header">Correct?</string>

  <string name="correct_description">Correct!</string>
  <string name="incorrect_description">Incorrect!</string>
  <string name="replay">replay</string>
  <string name="toast_string">Your Game Has Reset! Click Play!</string>

  <string name="direction_top"><![CDATA[3&5]]></string>
  <string name="direction_bottom">—</string>
  <string name="direction_left">3</string>
  <string name="direction_right">5</string>
  <string name="game_over_toast">Game Over</string>

  <string name="minutes_key">minutes_name</string>
  <string name="seconds_key">seconds_name</string>

  <string name="clock_format">%1$d:%2$04.1f</string>
  <string name="up_text">Flick up for FizzBuzz</string>
  <string name="left_text">Flick left for Fizz</string>
  <string name="down_text">Flick down for Neither</string>
  <string name="right_text">Flick right for Buzz</string>
  <string name="total_shown">Total Shown:</string>
  <string name="total_correct">Total Correct:</string>
  <string name="title_activity_splash_screen">splash_screen</string>
  <string name="how_to_splash">How To Play</string>
  <string name="how_to_play">FizzBuzz is a math game based on multiples of 3, 5, or both. If the number shown is a multiple of 3 (ex. 9) swipe left. If the number shown is a multiple of 5 (ex. 20) swipe right. If the number shown is a multiple of 3 and 5 (ex. 15) swipe swipe up. If it isn\'t a multiple of either swipe down.</string>
</resources>
