<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- TODO add icons -->

  <androidx.preference.PreferenceCategory
    android:title="@string/difficulty_title">

    <androidx.preference.SeekBarPreference
      android:defaultValue="@integer/time_limit_default"
      android:key="@string/time_limit_key"
      android:max="@integer/time_limit_max"
      android:summary="@string/time_limit_summary"
      android:title="@string/time_limit_title"/>

    <androidx.preference.SeekBarPreference
      android:defaultValue="@integer/num_digits_default"
      android:key="@string/num_digits_key"
      android:max="@integer/num_digits_max"
      android:summary="@string/num_digits_summary"
      android:title="@string/num_digits_title"/>

  </androidx.preference.PreferenceCategory>

  <androidx.preference.PreferenceCategory
    android:title="@string/general_title">

    <androidx.preference.SeekBarPreference
      android:defaultValue="@integer/game_time_default"
      android:key="@string/game_time_key"
      android:max="@integer/game_time_max"
      android:summary="@string/game_time_summary"
      android:title="@string/game_time_title"/>

  </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>