<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/play"
    android:icon="@drawable/play"
    android:title="@string/play"
    app:showAsAction="always"/>

  <item
    android:id="@+id/pause"
    android:enabled="false"
    android:icon="@drawable/pause"
    android:title="@string/pause"
    android:visible="false"
    app:showAsAction="always"/>

  <item
    android:id="@+id/replay"
    android:icon="@drawable/replay"
    android:title="@string/replay"
    app:showAsAction="always"/>

  <item
    android:id="@+id/settings"
    android:title="@string/settings"
    app:showAsAction="never"/>

  <item
    android:id="@+id/status"
    android:title="@string/status"
    app:showAsAction="never"/>

</menu>