<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.MainActivity">

  <ImageView
    android:id="@+id/correct_fizzbuzz_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/correct_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <ImageView
    android:id="@+id/incorrect_fizzbuzz_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/incorrect_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:id="@+id/correct_fizz_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/correct_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:id="@+id/incorrect_fizz_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/incorrect_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>


  <ImageView
    android:id="@+id/correct_buzz_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/correct_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ImageView
    android:id="@+id/incorrect_buzz_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/incorrect_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <ImageView
    android:id="@+id/correct_neither_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/correct_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="parent"/>
  <ImageView
    android:id="@+id/incorrect_neither_indicator"
    android:layout_width="@dimen/indicator_size"
    android:layout_height="@dimen/indicator_size"
    android:alpha="0"
    android:src="@drawable/incorrect_indicator"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="parent"/>
  <ImageView
    android:id="@+id/left_arrow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/left_arrow"
    android:visibility="visible"
    android:paddingLeft="20dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />
  <ImageView
    android:id="@+id/up_arrow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/up_arrow"
    android:visibility="visible"
    android:paddingTop="40dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"/>
  <ImageView
    android:id="@+id/right_arrow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/right_arrow"
    android:visibility="visible"
    android:paddingRight="20dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>

  <ImageView
    android:id="@+id/down_arrow"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/down_arrow"
    android:visibility="visible"
    android:paddingBottom="20dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />

  <TextView
    android:id="@+id/textView6"
    style="@style/DirectionMarker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/direction_top"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    style="@style/DirectionMarker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/direction_bottom"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    />
  <TextView
    style="@style/DirectionMarker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/direction_left"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
  <TextView
    android:id="@+id/textView5"
    style="@style/DirectionMarker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/direction_right"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/value_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:gravity="center"
    android:includeFontPadding="false"
    android:maxLines="1"
    app:autoSizeMaxTextSize="192sp"
    app:autoSizeMinTextSize="64sp"
    app:autoSizeStepGranularity="16sp"
    app:autoSizeTextType="uniform"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"/>

  <TextView
    android:id="@+id/clock_display"
    style="@style/ClockDisplay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/up_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/up_text"
    android:textColor="@color/darkText"
    android:textSize="18sp"
    android:paddingTop="75dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />
  <TextView
    android:id="@+id/left_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/left_text"
    android:textColor="@color/darkText"
    android:textSize="18sp"
    android:paddingLeft="35dp"
    android:paddingBottom="75dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/neither-text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/down_text"
    android:textColor="@color/darkText"
    android:textSize="18sp"
    android:paddingBottom="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    />
  <TextView
    android:id="@+id/right_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="monospace"
    android:text="@string/right_text"
    android:textColor="@color/darkText"
    android:textSize="18sp"
    android:paddingRight="50dp"
    android:paddingTop="75dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>